# SAPsim

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  README_PyPI.md  main.py  pyproject.toml  requirements.txt  requirements_CI.txt  setup.cfg  setup.py  sim.py  template.csv  testdist  tox.ini
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: pypi.yml  repo-visualizer.yml  test.yml  test_pypi.yml  tests.yml
SAPsim/: __init__.py
SAPsim/utils/: __init__.py  exceptions.py  execute.py  global_vars.py  globs.py  helpers.py  instructions.py  parser.py
docs/: SAPsim.rst  SAPsim.utils.rst  conf.py  index.rst  modules.rst  requirements.txt  rules.md  rules.rst  settings.md  settings.rst  src.rst  src.utils.rst  structure.md  structure.rst
src/utils/: __init__.py  exceptions.py  execute.py  globs.py  helpers.py  instructions.py  parser.py
tests/: README  test_SAPsim.py  test_example_progs.py  test_exceptions.py  test_helpers.py  test_instructions.py  test_run.py  testdist.sh
tests/data/public_prog/: ex1_debug_plain.txt  ex1_plain.txt  ex2_debug_plain.txt  ex2_plain.txt  example_debug.txt  example_full_speed.txt
tests/malformed_csv/: 16_mapped_addresses.csv  17_mapped_addresses.csv  19_mapped_addresses.csv  README.md  addrs_no_mnemonic_and_arg_should_drop_off_bottom.csv  arg_no_mnemonic_addr_15.csv  blank_row_3.csv  dup_addr_0.csv  first_hexit_16_addr_0.csv  mnemonic_no_arg_addr_1.csv  negative_addr_row_1.csv  no_addr_row_16.csv  no_first_hexit_addr_15.csv  no_second_hexit_addr_1.csv  skipped_addr_1_should_drop_off_bottom.csv
tests/public_prog/: README.md  ex1.csv  ex2.csv  example.csv
